แก้ไข content + เปลี่ยนรูป

--- a/savethedate/index.html
+++ b/savethedate/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Wedding &mdash; Book & Tae</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
-
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -156,34 +136,42 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>พิธีเช้า</h3>
+									<h3><i class="icon-sun"></i> พิธีเช้า</h3>
+									<p>
+										วันอาทิตย์ที่ 14 กันยายน พ.ศ. 2568<br>
+										ณ ห้องอินฟินิตี้ บอลรูม
+									</p>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>4:00 PM</span>
-										<span>6:00 PM</span>
+										<span>7:00 น.</span>
+										<span>8:30 น.</span>
+										<span>9:00 น.</span>
+										<span>9:30 น.</span>
 									</div>
 									<div class="event-col">
-										<span><b>กิจกรรม</b></span>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
+										<i class="icon-list"></i>
+										<span>พิธีสงฆ์</span>
+										<span>พิธีแห่ขันหมาก</span>
+										<span>พิธีหมั้น</span>
+										<span>พิธีหลั่งน้ำพระพุทธมนต์</span>
 									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>งานเลี้ยงฉลอง</h3>
+									<h3><i class="icon-heart"></i> งานเลี้ยงฉลอง</h3>
+									<p>
+										วันอาทิตย์ที่ 14 กันยายน พ.ศ. 2568<br>
+										ณ ห้องอินฟินิตี้ บอลรูม
+									</p>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>7:00 PM</span>
-										<span>12:00 AM</span>
+										<span>11:30 น.</span>
 									</div>
 									<div class="event-col">
-										<i class="icon-calendar"></i>
-										<span>Monday 28</span>
-										<span>November, 2016</span>
+										<i class="icon-list"></i>
+										<span>ฉลองมงคลสมรส (โต๊ะจีน)</span>
 									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 						</div>
