แก้ layout ตารางเวลา

--- a/savethedate/index.html
+++ b/savethedate/index.html
@@ -170,7 +170,7 @@
 									</div>
 									<div class="event-col">
 										<i class="icon-list"></i>
-										<span>ฉลองมงคลสมรส (โต๊ะจีน)</span>
+										<span>ฉลองมงคลสมรส<br>(โต๊ะจีน)</span>
 									</div>
 								</div>
 							</div>
