edit Layout & change image % edit script countdown

--- a/savethedate/index.html
+++ b/savethedate/index.html
@@ -134,14 +134,14 @@
 				<div class="display-t">
 					<div class="display-tc">
 						<div class="col-md-10 col-md-offset-1">
-							<div class="col-md-6 col-sm-6 text-center">
+							<div class="col-md-6 col-sm-6">
 								<div class="event-wrap animate-box">
-									<h3><i class="icon-sun"></i> พิธีเช้า</h3>
-									<p>
+									<h3 class="text-center"><i class="icon-sun"></i> พิธีเช้า</h3>
+									<p class="text-center">
 										วันอาทิตย์ที่ 14 กันยายน พ.ศ. 2568<br>
 										ณ ห้องอินฟินิตี้ บอลรูม
 									</p>
-									<div class="event-col">
+									<div class="event-col text-center">
 										<i class="icon-clock"></i>
 										<span>7:00 น.</span>
 										<span>8:30 น.</span>
@@ -157,14 +157,14 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-6 col-sm-6 text-center">
+							<div class="col-md-6 col-sm-6">
 								<div class="event-wrap animate-box">
-									<h3><i class="icon-heart"></i> งานเลี้ยงฉลอง</h3>
-									<p>
+									<h3 class="text-center"><i class="icon-heart"></i> งานเลี้ยงฉลอง</h3>
+									<p class="text-center">
 										วันอาทิตย์ที่ 14 กันยายน พ.ศ. 2568<br>
 										ณ ห้องอินฟินิตี้ บอลรูม
 									</p>
-									<div class="event-col">
+									<div class="event-col text-center">
 										<i class="icon-clock"></i>
 										<span>11:30 น.</span>
 									</div>
@@ -176,6 +176,51 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/gallery-5.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Are You Attending?</h2>
+					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
+				</div>
+			</div>
+			<div class="row animate-box">
+				<div class="col-md-10 col-md-offset-1">
+					<form class="form-inline">
+						<div class="col-md-4 col-sm-4">
+							<div class="form-group">
+								<select name="relation" id="relation" class="form-control">
+									<option value="W">แขกเจ้าสาว</option>
+									<option value="M">แขกเจ้าบ่าว</option>
+									<option value="Both">แขกทั้ง 2 ฝ่าย</option>
+								</select>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-4">
+							<div class="form-group">
+								<label for="name" class="sr-only">ชื่อเล่น / สังกัด</label>
+								<input type="name" class="form-control" id="name" placeholder="ชื่อเล่น / สังกัด">
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-4">
+							<div class="form-group">
+								<label for="family" class="sr-only">จำนวนผู้ติดตาม</label>
+								<input type="number" class="form-control" id="family" placeholder="จำนวนผู้ติดตาม">
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-6">
+							<button type="submit" class="btn btn-default btn-block" style="background: #9e9e9ead;">ฉันไม่สะดวก</button>
+						</div>
+						<div class="col-md-6 col-sm-6">
+							<button type="submit" class="btn btn-default btn-block">ฉันสะดวกร่วมงาน</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -248,15 +293,15 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
-						<a href="images/gallery-1.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook001.jpg); "> 
+							<a href="#" class="color-1">
 							<div class="case-studies-summary">
 								<span>14 Photos</span>
 								<h2>Two Glas of Juice</h2>
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook002.jpg); ">
 						<a href="#" class="color-2">
 							<div class="case-studies-summary">
 								<span>30 Photos</span>
@@ -266,7 +311,7 @@
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook003.jpg); ">
 						<a href="#" class="color-3">
 							<div class="case-studies-summary">
 								<span>90 Photos</span>
@@ -274,7 +319,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook004.jpg); ">
 						<a href="#" class="color-4">
 							<div class="case-studies-summary">
 								<span>12 Photos</span>
@@ -283,7 +328,7 @@
 						</a>
 					</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook005.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
 									<span>50 Photos</span>
@@ -291,7 +336,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook006.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
 									<span>45 Photos</span>
@@ -300,7 +345,7 @@
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook007.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
 									<span>35 Photos</span>
@@ -309,7 +354,7 @@
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook008.jpg); "> 
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
 									<span>90 Photos</span>
@@ -317,7 +362,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/taebook009.jpg); ">
 							<a href="#" class="color-6">
 								<div class="case-studies-summary">
 									<span>56 Photos</span>
@@ -326,215 +371,6 @@
 							</a>
 						</li>
 					</ul>		
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!--div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="display-t">
-					<div class="display-tc">
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-users"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Estimated Guest</span>
-
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-user"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">We Catter</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-calendar"></i>
-								</span>
-								<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Events Done</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-clock"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Hours Spent</span>
-
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div-->
-
-	<!--div id="fh5co-testimonial">
-		<div class="container">
-			<div class="row">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<span>Best Wishes</span>
-						<h2>Friends Wishes</h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 animate-box">
-						<div class="wrap-testimony">
-							<div class="owl-carousel-fullwidth">
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-1.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-2.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, at the coast of the Semantics, a large language ocean."</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-3.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean."</p>
-										</blockquote>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div-->
-
-	<!--div id="fh5co-services" class="fh5co-section-gray">
-		<div class="container">
-			
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>We Offer Services</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-calendar"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>We Organized Events</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-image"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Photoshoot</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-video"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Video Editing</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="col-md-6 animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
-						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
-					</div>
-				</div>
-			</div>
-
-			
-		</div>
-	</div-->
-
-
-	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Are You Attending?</h2>
-					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-10 col-md-offset-1">
-					<form class="form-inline">
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<select name="relation" id="relation" class="form-control">
-									<option value="W">แขกเจ้าสาว</option>
-									<option value="M">แขกเจ้าบ่าว</option>
-									<option value="Both">แขกทั้ง 2 ฝ่าย</option>
-								</select>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="name" class="sr-only">ชื่อเล่น / สังกัด</label>
-								<input type="name" class="form-control" id="name" placeholder="ชื่อเล่น / สังกัด">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="family" class="sr-only">จำนวนผู้ติดตาม</label>
-								<input type="text" class="form-control" id="family" placeholder="จำนวนผู้ติดตาม">
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-6">
-							<button type="submit" class="btn btn-default btn-block">ฉันไม่สะดวก</button>
-						</div>
-						<div class="col-md-6 col-sm-6">
-							<button type="submit" class="btn btn-default btn-block">ฉันสะดวกร่วมงาน</button>
-						</div>
-					</form>
 				</div>
 			</div>
 		</div>
@@ -602,13 +438,6 @@
         day: 14
     });
 
-    //jQuery example
-    $('#simply-countdown-losange').simplyCountdown({
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate(),
-        enableUtc: false
-    });
 </script>
 
 	</body>
