add Calendar button

--- a/savethedate/index.html
+++ b/savethedate/index.html
@@ -77,7 +77,11 @@
 									วันอาทิตย์ที่ 14 กันยายน 2568
 								</h2>
 								<div class="simply-countdown simply-countdown-one"></div>
-								<p><a href="#" class="btn btn-default btn-sm"> + แจ้งเตือน</a></p>
+								<p><a href="webcal://book-tae-the-wedding.com/savethedate/WeddingDay.ics" class="btn btn-default btn-sm">📅 Add to Calendar</a></p>
+								<!--a class="calendar-button" target="_blank"
+								href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=งานเปิดตัวสินค้าใหม่&dates=20250315T180000Z/20250315T200000Z&details=มาร่วมงานเปิดตัวสินค้าใหม่ของเรา!&location=Upper Rank, Hat Yai">
+									📅 Add to Google Calendar
+								</a-->
 							</div>
 						</div>
 					</div>
