--- a/savethedate/index.html
+++ b/savethedate/index.html
@@ -41,10 +41,34 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+	<style>
+        .calendar-button-google {
+            display: inline-block;
+            background-color: #4285F4;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-family: Arial, sans-serif;
+        }
+        .calendar-button-google:hover {
+            background-color: #357ae8;
+        }
+		.calendar-button-ios {
+            display: inline-block;
+            background-color: white;
+            color: #607d8b;
+            padding: 10px 20px;
+            font-size: 16px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-family: Arial, sans-serif;
+        }
+        .calendar-button-ios:hover {
+            background-color: #005FCC;
+        }
+    </style>
 
 </head>
 
@@ -77,11 +101,13 @@
 									วันอาทิตย์ที่ 14 กันยายน 2568
 								</h2>
 								<div class="simply-countdown simply-countdown-one"></div>
-								<p><a href="webcal://book-tae-the-wedding.com/savethedate/WeddingDay.ics" class="btn btn-default btn-sm">📅 Add to Calendar</a></p>
-								<!--a class="calendar-button" target="_blank"
-								href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=งานเปิดตัวสินค้าใหม่&dates=20250315T180000Z/20250315T200000Z&details=มาร่วมงานเปิดตัวสินค้าใหม่ของเรา!&location=Upper Rank, Hat Yai">
-									📅 Add to Google Calendar
-								</a-->
+								<p>
+									<a href="webcal://book-tae-the-wedding.com/savethedate/WeddingDay.ics" class="calendar-button-ios">📅 Add to iOS Calendar</a>
+									<a class="calendar-button-google" target="_blank"
+									href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Book❤️Tae%20Wedding%20Day%20🤵👰&dates=20250914T113000Z/20250914T140000Z&details=วันอาทิตย์ที่%2014%20กันยายน%202568%20ห้อง%20INFINITY%20BALLROOM%20โรงแรม%20Pullman%20Bangkok%20King%20Power&location=Pullman Bangkok King Power Hotel">
+										📅 Add to Google Calendar
+									</a>
+								</p>
 							</div>
 						</div>
 					</div>
