--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         document.getElementById("envelope").addEventListener("click", function() {
             this.classList.add("open");
             setTimeout(() => {
-                window.location.href = "savethedate/index.html"; // เปลี่ยนเป็น URL ของหน้าแรกของงานแต่ง
+                window.location.href = "savethedate/index.php"; // เปลี่ยนเป็น URL ของหน้าแรกของงานแต่ง
             }, 1500);
         });
     </script>
